--- a/src/components/Movies.astro
+++ b/src/components/Movies.astro
@@ -15,7 +15,7 @@ fetch('https://api.themoviedb.org/3/movie/popular?language=en-US&page=1', option
 */
 
 
-const response = await fetch("https://api.themoviedb.org/3/movie/popular?api_key=f3fe6aa7b07bdfd66fb546a4f062cb2a&language=en-US&page=1")
+const response = await fetch("https://api.themoviedb.org/3/movie/popular?api_key= &language=en-US&page=1")
 
 const data = await response.json();
 const detail = "/detail/";
