--- a/src/components/Movies.astro
+++ b/src/components/Movies.astro
@@ -4,7 +4,7 @@ const options = {
   method: 'GET',
   headers: {
     accept: 'application/json',
-    Authorization: 'Bearer eyJhbGciOiJIUzI1NiJ9.eyJhdWQiOiJmM2ZlNmFhN2IwN2JkZmQ2NmZiNTQ2YTRmMDYyY2IyYSIsInN1YiI6IjY2NzUzNzM3MzM0YzdjMTc0YjE2ZTgzNCIsInNjb3BlcyI6WyJhcGlfcmVhZCJdLCJ2ZXJzaW9uIjoxfQ.SKO5-81qquTbxv0ReCJlTIr6NfcEg0EpHS22PnBq8LU'
+    Authorization: ''
   }
 };
 
